Fixed navbar not being clickable. umessage component was on top of it, so i set the z-index of the navbar higher.

--- a/frontend/src/public/css/loggedin/uhome.css
+++ b/frontend/src/public/css/loggedin/uhome.css
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: center;
     padding-bottom: 30px;
-    
+    transition: 0.6s ease-out;
 }
 
 .show-messages {
